--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -4,7 +4,8 @@
 
 <br>
 
-<div>
+<nav class="page-nav">
   <%= link_to "Show this book", @book %> |
   <%= link_to "Back to books", books_path %>
-</div>
+</nav>
+
