--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -4,7 +4,6 @@
 <br>
 
 <nav class="page-nav">
-  <%= link_to "Show this book", @book %> |
-  <%= link_to "Back to books", books_path %>
+  <%= link_to t(".show_button"), @book %> |
+  <%= link_to t(".index_button"), books_path %>
 </nav>
-
