newページのbuttonの日本語化

--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -5,5 +5,5 @@
 
 <nav class="page-nav">
   <%= link_to t(".show_button"), @book %> |
-  <%= link_to t(".index_button"), books_path %>
+  <%= link_to t(".back_button"), books_path %>
 </nav>
