--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -14,5 +14,5 @@
 </div>
 
 <nav class="page-nav">
-  <%= link_to "New book", new_book_path %>
+  <%= link_to t(".new_button"), new_book_path %>
 </nav>
