--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -5,8 +5,8 @@
 </div>
 
 <nav class="page-nav">
-  <%= link_to "Edit this book", edit_book_path(@book) %> |
-  <%= link_to "Back to books", books_path %>
+  <%= link_to t(".edit_button"), edit_book_path(@book) %> |
+  <%= link_to t(".back_button"), books_path %>
 
-  <%= button_to "Destroy this book", @book, method: :delete %>
+  <%= button_to t(".delete_button"), @book, method: :delete %>
 </nav>
