--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -7,7 +7,7 @@
     <div class="index-item">
       <%= render book %>
       <p>
-        <%= link_to "Show this book", book %>
+        <%= link_to t(".show_button"), book %>
       </p>
     </div>
   <% end %>
