--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,8 @@
   <% end %>
 </p>
 
+     <p class="notice"><%= notice %></p>
+     <p class="alert"><%= alert %></p>
     <%= yield %>
   </body>
 </html>
