--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,13 +10,11 @@
     <%= javascript_importmap_tags %>
   </head>
   <body class="<%= params[:action] %>">
-    <p class="navbar-text pull-right">
-      <% if user_signed_in? %>
-        Logged in as <strong><%= current_user.email %></strong>.
-        <%= link_to 'Edit profile', edit_user_registration_path, class: 'navbar-link' %> |
-        <%= button_to "Logout", destroy_user_session_path, method: :delete, class: 'navbar-link'  %>
-      <% end %>
-    </p>
+    <% if user_signed_in? %>
+      Logged in as <strong><%= current_user.email %></strong>.
+      <%= button_to 'Edit profile', edit_user_registration_path %>
+      <%= button_to 'Logout', destroy_user_session_path, method: :delete %>
+    <% end %>
     <p class="alert"><%= alert %></p>
     <%= yield %>
   </body>
