--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   <body class="<%= params[:action] %>">
     <% if user_signed_in? %>
       Logged in as <strong><%= current_user.email %></strong>.
-      <%= button_to 'Edit profile', edit_user_registration_path %>
+      <%= link_to 'Edit profile', edit_user_registration_path %>
       <%= button_to 'Logout', destroy_user_session_path, method: :delete %>
     <% end %>
     <p class="alert"><%= alert %></p>
