--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -23,12 +23,12 @@
 
   <div class="field">
     <%= f.label :postal_code %><br />
-    <%= f.text_field :postal_code, autofocus: true %>
+    <%= f.text_field :postal_code, autofocus: true, autocomplete: "postal-code" %>
   </div>
 
   <div class="field">
     <%= f.label :address %><br />
-    <%= f.text_field :address, autofocus: true %>
+    <%= f.text_field :address, autofocus: true, autocomplete: "street-address" %>
   </div>
 
   <div class="field">
