--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,5 @@
 <h1> </h1>
 <p>メールアドレス : <%= @user.email %></p>
-<p>プロフィール : <%= @user.profile %></p>
+<p>メールアドレス : <%= @user.postal_code %></p>
+<p>メールアドレス : <%= @user.address %></p>
+<p>メールアドレス : <%= @user.profile %></p>
