app/views/users/show.html.erbの記載内容の修正

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
 <h1> </h1>
 <p>メールアドレス : <%= @user.email %></p>
-<p>メールアドレス : <%= @user.postal_code %></p>
-<p>メールアドレス : <%= @user.address %></p>
-<p>メールアドレス : <%= @user.profile %></p>
+<p>郵便番号 : <%= @user.postal_code %></p>
+<p>住所 : <%= @user.address %></p>
+<p>プロフィール : <%= @user.profile %></p>
