一旦作業状況を記録

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<h1>ユーザー情報</h1>
+<h1>ユーザー</h1>
 <p>メールアドレス : <%= @user.email %></p>
 <p>郵便番号 : <%= @user.postal_code %></p>
 <p>住所 : <%= @user.address %></p>
