--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,9 @@
   <body class="<%= params[:action] %>">
     <% if user_signed_in? %>
       Logged in as <strong><%= current_user.email %></strong>.
-      <%= link_to 'Edit profile', edit_user_registration_path %>
+      <%= link_to "My page", user_path(current_user.id) %> | 
+      <%= link_to 'Edit profile', edit_user_registration_path %> | 
+      <%= link_to "User index", users_path %>
       <%= button_to 'Logout', destroy_user_session_path, method: :delete %>
     <% end %>
     <p class="alert"><%= alert %></p>
