--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
-<h1>ユーザー</h1>
-<p>メールアドレス : <%= @user.email %></p>
-<p>郵便番号 : <%= @user.postal_code %></p>
-<p>住所 : <%= @user.address %></p>
-<p>プロフィール : <%= @user.profile %></p>
+<h1>My page</h1>
+<p>email : <%= @user.email %></p>
+<p>postal_code : <%= @user.postal_code %></p>
+<p>address : <%= @user.address %></p>
+<p>profile : <%= @user.profile %></p>
