ユーザー詳細ページ・ユーザー一覧からbooks_indexに戻るリンクを記述

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,3 +3,4 @@
 <p>postal_code : <%= @user.postal_code %></p>
 <p>address : <%= @user.address %></p>
 <p>profile : <%= @user.profile %></p>
+<%= link_to t('books_index'), books_path %>
