config/locales/ja.yml config/locales/en.ymlにそれぞれ国際化の記述を追加

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,6 +3,6 @@
   <p>email : <%= user.email %></p>
   <p>profile : <%= user.profile %></p>
 <% end %>
-<%= link_to t('books_index'), books_path %>
+<%= link_to t('.books_index'), books_path %>
 
 <%= paginate @users %>
