--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,7 +1,7 @@
 <h1>User index</h1>
 <% @users.each do |user| %>
-  <p>email : <%= user.email %></p>
-  <p>profile : <%= user.profile %></p>
+  <p><%= t '.email' %> : <%= user.email %></p>
+  <p><%= t '.profile' %> : <%= user.profile %></p>
 <% end %>
 <%= link_to t('.books_index'), books_path %>
 
