--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 <h1>My page</h1>
-<p>email : <%= @user.email %></p>
-<p>postal_code : <%= @user.postal_code %></p>
-<p>address : <%= @user.address %></p>
-<p>profile : <%= @user.profile %></p>
+<p><%= t '.email' %> : <%= @user.email %></p>
+<p><%= t '.postal_code' %> : <%= @user.postal_code %></p>
+<p><%= t '.address' %> : <%= @user.address %></p>
+<p><%= t '.profile' %> : <%= @user.profile %></p>
 <%= link_to t('.books_index'), books_path %>
