app/views/users/show.html.erbとapp/views/users/index.html.erbの翻訳漏れの修正

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,4 @@
-<h1>User index</h1>
+<h1><%= t '.User index'%></h1>
 <% @users.each do |user| %>
   <p><%= t '.email' %> : <%= user.email %></p>
   <p><%= t '.profile' %> : <%= user.profile %></p>
