--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<h1>My page</h1>
+<h1><%= t '.My page'%></h1>
 <p><%= t '.email' %> : <%= @user.email %></p>
 <p><%= t '.postal_code' %> : <%= @user.postal_code %></p>
 <p><%= t '.address' %> : <%= @user.address %></p>
