app/views/users/index.html.erb app/views/users/_user.html.erbに画像受け取りフィールドを追記

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -7,8 +7,7 @@
       <p>
         <%= link_to t('views.common.show', name: User.model_name.human.downcase), user %>
       </p>
+        <%= image_tag user.avatar %>
     </div>
   <% end %>
 </div>
-
-<%= paginate @users %>
