3/2作業終了：アカウント登録の画面を調整中

--- a/app/views/devise/registrations/_profile_fields.html.erb
+++ b/app/views/devise/registrations/_profile_fields.html.erb
@@ -17,3 +17,8 @@
   <%= f.label :self_introduction %><br />
   <%= f.text_area :self_introduction %>
 </div>
+
+<div class="field">
+  <%= form.label :avatar %><br />
+  <%= form.file_field :avatar %>
+</div>
