--- a/app/views/devise/registrations/_profile_fields.html.erb
+++ b/app/views/devise/registrations/_profile_fields.html.erb
@@ -19,6 +19,6 @@
 </div>
 
 <div class="field">
-  <%= form.label :avatar %><br />
-  <%= form.file_field :avatar %>
+  <%= f.label :avatar %><br />
+  <%= f.file_field :avatar %>
 </div>
