app/controllers/application_controller.rb app/views/users/_user.html.erbの記述内容を変更

--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -27,7 +27,7 @@
 
   <p>
     <strong><%= User.human_attribute_name(:avatar) %>:</strong>
-    <%= user.avatar %>
+    <%= image_tag @user.user_icon %>
   </p>
 
 </div>
