app/views/users/_user.html.erbに画像出力の記述追記

--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -25,9 +25,6 @@
     <%= user.self_introduction %>
   </p>
 
-  <p>
-    <strong><%= User.human_attribute_name(:avatar) %>:</strong>
-    <%= image_tag @user.user_icon %>
-  </p>
+  <%= image_tag user.avatar if user.avatar.attached? %>
 
 </div>
