app/views/users/_user.html.erbにリサイズを適応させる記述を追記

--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,7 +1,7 @@
 <div id="<%= dom_id user %>">
   <p>
     <strong><%= User.human_attribute_name(:avatar) %>:</strong>
-    <%= image_tag user.avatar if user.avatar.attached? %>
+    <%= image_tag user.avatar.variant(resize: "100x100") if user.avatar.attached? %>
   </p>
 
   <p>
