--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -3,8 +3,9 @@
 <%= render @report %>
 
 <div>
-  <%= link_to "Edit this report", edit_report_path(@report) %> |
+  <% if @report.user == current_user %>
+    <%= link_to "Edit this report", edit_report_path(@report) %>
+    <%= button_to "Destroy this report", @report, method: :delete %>
+  <% end %>
   <%= link_to "Back to reports", reports_path %>
-
-  <%= button_to "Destroy this report", @report, method: :delete %>
 </div>
