--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -6,7 +6,7 @@
 
 <nav class="page-nav">
   <% if @report.user == current_user %>
-    <%= link_to "Edit this report", edit_report_path(@report) %>
+    <%= link_to t('views.common.edit', name: Report.model_name.human.downcase), edit_report_path(@report) %>
     <%= button_to t('views.common.destroy', name: Report.model_name.human.downcase), @report, method: :delete %>
   <% end %>
   <%= link_to t('views.common.back', name: i18n_pluralize(Report.model_name.human.downcase)), reports_path %>
