--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -2,9 +2,7 @@
   <% if comment.errors.any? %>
     <div id="error_explanation">
       <h2>
-        <%= I18n.t("errors.messages.not_saved",
-                  count: comment.errors.count,
-                  resource: comment.class.model_name.human.downcase) %>
+        <%= I18n.t("errors.messages.not_saved", count: comment.errors.count, resource: comment.class.model_name.human.downcase) %>
       </h2>
       <ul>
         <% comment.errors.full_messages.each do |message| %>
