app/views/books/show.html.erb app/views/reports/show.html.erbに追記

--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -11,3 +11,5 @@
   <%# <% end %> %>
   <%= link_to t('views.common.back', name: i18n_pluralize(Report.model_name.human.downcase)), reports_path %>
 </nav>
+
+<%= render 'comments/form', commentable: @report, comment: @comment %>
