app/views/books/show.html.erb app/views/reports/show.html.erbに追記

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -12,3 +12,4 @@
 </nav>
 
 <%= render 'comments/form', commentable: @book, comment: @comment %>
+<%= render 'comments/comments', comments: @comments %>
