--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -13,3 +13,4 @@
 </nav>
 
 <%= render 'comments/form', commentable: @report, comment: @comment %>
+<%= render 'comments/comments', comments: @comments %>
