--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -12,4 +12,4 @@
 </nav>
 
 <%= render 'comments/form', commentable: @book, comment: @comment %>
-<%= render 'comments/comments', comments: @comments %>
+<%= render 'comments/comments', commentable: @book, comments: @comments %>
