app/views/reports/show.html.erbの記述変更

--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -13,4 +13,4 @@
 </nav>
 
 <%= render 'comments/form', commentable: @report, comment: @comment %>
-<%= render 'comments/comments', comments: @comments %>
+<%= render 'comments/comments', commentable: @report, comments: @comments %>
