--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,17 +1,22 @@
-<%= form_with model: [commentable, comment] do |f| %>
+<%= form_with(model: [commentable, comment]) do |form| %>
   <% if comment.errors.any? %>
-    <div id="error_explanation">
-      <h2>
-        <%= I18n.t("errors.messages.not_saved", count: comment.errors.count, resource: comment.class.model_name.human.downcase) %>
-      </h2>
+    <div style="color: red">
+      <h2><%= pluralize(comment.errors.count, "error") %> prohibited this comment from being saved:</h2>
+
       <ul>
-        <% comment.errors.full_messages.each do |message| %>
-          <li><%= message %></li>
+        <% comment.errors.each do |error| %>
+          <li><%= error.full_message %></li>
         <% end %>
       </ul>
     </div>
   <% end %>
+  
+  <div>
+    <%= form.label :content, style: "display: block" %>
+    <%= form.text_area :content %>
+  </div>
 
-  <%= f.text_field :content, required: true %>
-  <%= f.submit t('.create') %>
+  <div>
+    <%= form.submit %>
+  </div>
 <% end %>
