commentableの変数名をimageableに変更

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -11,5 +11,5 @@
   <%= button_to t('views.common.destroy', name: Book.model_name.human.downcase), @book, method: :delete %>
 </nav>
 
-<%= render 'comments/form', commentable: @book, comment: @comment %>
-<%= render 'comments/comments', commentable: @book, comments: @comments %>
+<%= render 'comments/form', imageable: @book, comment: @comment %>
+<%= render 'comments/comments', imageable: @book, comments: @comments %>
