--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -4,5 +4,5 @@
   <%= render @report %>
 </div>
 
-<%= render 'comments/form', commentable: @report, comment: @comment %>
-<%= render 'comments/comments', commentable: @report, comments: @comments %>
+<%= render 'comments/form', imageable: @report, comment: @comment %>
+<%= render 'comments/comments', imageable: @report, comments: @comments %>
