app/views/books/show.html.erb app/views/reports/show.html.erbにrenderの記述変更

--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -1,7 +1,7 @@
 <h1><%= t('views.common.title_show', name: Report.model_name.human) %></h1>
 
 <div class="show-item">
-  <%= render @report %>
+  <%= render "books/book", book: @book %>
 </div>
 
 <%= render 'comments/form', imageable: @report, comment: @comment %>
