--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -4,6 +4,6 @@
 <br>
 
 <nav class="page-nav">
-  <%= link_to t(".show_button"), @book %> |
-  <%= link_to t(".back_button"), books_path %>
+  <%= link_to t('views.common.show', name: Book.model_name.human.downcase), @book %> |
+  <%= link_to t('views.common.back', name: Book.model_name.human.downcase), books_path %>
 </nav>
