--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,18 +1,18 @@
 <p style="color: green"><%= notice %></p>
 
-<h1><%= t '.title' %></h1>
+<h1><%= t('views.common.title_index', name: Book.model_name.human) %></h1>
 
 <div id="books" class="index-items">
   <% @books.each do |book| %>
     <div class="index-item">
       <%= render book %>
       <p>
-        <%= link_to t(".show_button"), book %>
+        <%= link_to t('views.common.show', name: Book.model_name.human.downcase), book %>
       </p>
     </div>
   <% end %>
 </div>
 
 <nav class="page-nav">
-  <%= link_to t(".new_button"), new_book_path %>
+  <%= link_to t('views.common.new', name: Book.model_name.human.downcase), new_book_path %>
 </nav>
