--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -5,5 +5,5 @@
 <br>
 
 <nav class="page-nav">
-  <%= link_to t(".index_button"), books_path %>
+  <%= link_to t('views.common.back', name: Book.model_name.human.downcase), books_path %>
 </nav>
