--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -5,8 +5,8 @@
 </div>
 
 <nav class="page-nav">
-  <%= link_to t(".edit_button"), edit_book_path(@book) %> |
-  <%= link_to t(".back_button"), books_path %>
-
-  <%= button_to t(".delete_button"), @book, method: :delete %>
+  <%= link_to t('views.common.edit', name: Book.model_name.human.downcase), edit_book_path(@book) %> |
+  <%= link_to t('views.common.back', name: Book.model_name.human.downcase), books_path %>
+  
+  <%= button_to t('views.common.destroy', name: Book.model_name.human.downcase), @book, method: :delete %>
 </nav>
