--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,5 +1,4 @@
-<h1><%= t '.title' %></h1>
-
+<h1><%= t('views.common.title_new', name: Book.model_name.human.downcase) %></h1>
 <%= render "form", book: @book %>
 
 <br>
