app/views/reports/_report.html.erbに追記

--- a/app/views/reports/_report.html.erb
+++ b/app/views/reports/_report.html.erb
@@ -19,4 +19,13 @@
     <%= l report.created_on %>
   </p>
 
+  <p>
+    <strong><%= t('views.reports.mentioned_from') %>:</strong>
+  </p>
+  <ul>
+    <% report.mentioned_reports.each do |report| %>
+      <li><%= link_to report.title, report %></li>
+    <% end %>
+  </ul>
+
 </div>
