--- a/app/views/reports/_report.html.erb
+++ b/app/views/reports/_report.html.erb
@@ -6,7 +6,7 @@
 
   <p>
     <strong><%= Report.human_attribute_name(:content) %>:</strong>
-    <%= format_content content_url_to_link report.content %>
+    <%= content_url_to_link(h(report.content)).html_safe %>
   </p>
 
   <p>
