--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -5,7 +5,7 @@
 
   <div class="field">
     <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+    <%= f.email_field :email, autocomplete: "email" %>
   </div>
 
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
@@ -33,17 +33,17 @@
 
   <div class="field">
     <%= f.label :postal_code %><br />
-    <%= f.text_field :postal_code, autofocus: true, autocomplete: "postal-code" %>
+    <%= f.text_field :postal_code, autocomplete: "postal-code" %>
   </div>
 
   <div class="field">
     <%= f.label :address %><br />
-    <%= f.text_field :address, autofocus: true, autocomplete: "street-address" %>
+    <%= f.text_field :address, autocomplete: "street-address" %>
   </div>
 
   <div class="field">
     <%= f.label :profile %><br />
-    <%= f.text_field :profile, autofocus: true %>
+    <%= f.text_field :profile %>
   </div>
 
   <div class="actions">
