--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,6 +42,9 @@
     <% if alert.present? %>
       <p id="alert"><%= alert %></p>
     <% end %>
+      <% flash.each do |key, value| %>
+        <div class="alert alert-<%= key %>"><%= t(value) %></div>
+      <% end %>
     <%= yield %>
   </body>
 </html>
