一旦保存メッセージの反映はできている

--- a/app/assets/stylesheets/menu.css
+++ b/app/assets/stylesheets/menu.css
@@ -55,3 +55,13 @@ menu-container
 #notice {
     color: var(--global-success-c);
 }
+
+/* #alert-success {
+    color: var(--global-success-c);
+}
+#alert-notice {
+    color: var(--global-success-c);
+}
+#alert-alert {
+    color: var(--global-danger-c);
+} */
