--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,14 +36,8 @@
         </ul>
       </div>
     <% end %>
-    <% if notice.present? %>
-      <p id="notice"><%= notice %></p>
-    <% end %>
-    <% if alert.present? %>
-      <p id="alert"><%= alert %></p>
-    <% end %>
       <% flash.each do |key, value| %>
-        <div class="alert alert-<%= key %>"><%= t(value) %></div>
+        <p class="<%= key %>"><%= t(value) %></p>
       <% end %>
     <%= yield %>
   </body>
