--- a/app/assets/stylesheets/menu.css
+++ b/app/assets/stylesheets/menu.css
@@ -48,20 +48,14 @@ menu-container
     background-color: var(--global-secondary-bgc-hover);
 }
 
-#alert {
+.flash-notice {
+    color: var(--global-success-c);
+  }
+
+.flash-success {
+    color: var(--global-success-c);
+  }
+
+.flash-alert {
     color: var(--global-danger-c);
 }
-
-#notice {
-    color: var(--global-success-c);
-}
-
-/* #alert-success {
-    color: var(--global-success-c);
-}
-#alert-notice {
-    color: var(--global-success-c);
-}
-#alert-alert {
-    color: var(--global-danger-c);
-} */
