--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,7 +37,7 @@
       </div>
     <% end %>
       <% flash.each do |key, value| %>
-        <p class="<%= key %>"><%= t(value) %></p>
+        <div class="flash-<%= key %>"><%= value %></div>
       <% end %>
     <%= yield %>
   </body>
