--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,8 +36,11 @@
         </ul>
       </div>
     <% end %>
-      <% flash.each do |key, value| %>
-        <div class="flash-<%= key %>"><%= value %></div>
+      <% if notice.present? %>
+        <p id="notice"><%= notice %></p>
+      <% end %>
+      <% if alert.present? %>
+        <p id="alert"><%= alert %></p>
       <% end %>
     <%= yield %>
   </body>
